# copilot-taller-s2

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: README.md  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Login.jsx  Welcome.jsx
frontend/src/services/: api.js
